--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <div class="posts-title col-xs-9 col-sm-10">
                 <div class="row">
                   <div class="col-xs-11 col-sm-10">
-                    <a href="/posts/debian-x-ui/">Hax/Woiden科学上网指南</a>
+                    <a href="/posts/debian-x-ui/">自建节点科学上网指南</a>
                   </div>
                   <div class="col-xs-1 col-sm-2 posts-tags">
                     
