--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Notes" />
-    <meta property="og:url" content="https://enotes.cf/" />
-    <link rel="canonical" href="https://enotes.cf/" /><link rel="alternate" type="application/atom+xml" href="https://enotes.cf/index.xml" title="Notes"><title>Notes</title>
+    <meta property="og:url" content="https://enotes.eu.org/" />
+    <link rel="canonical" href="https://enotes.eu.org/" /><link rel="alternate" type="application/atom+xml" href="https://enotes.eu.org/index.xml" title="Notes"><title>Notes</title>
 		<meta property="og:title" content="Notes" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="" />
